# code_paper

./: README.md  config.h.cmake  conv_rates_torus.ipynb  dune.module
build-cmake/: CMakeCache.txt  CPackConfig.cmake  CTestTestfile.cmake  Makefile  code.pc
build-cmake/cmake/modules/: Makefile
build-cmake/cmake/pkg/: code-config.cmake
build-cmake/doc/: Makefile
build-cmake/doc/doxygen/: Makefile
build-cmake/dune/: Makefile
build-cmake/dune/code/: CTestTestfile.cmake  Makefile
build-cmake/src/: CTestTestfile.cmake  Makefile
code/: CMakeLists.txt  code.pc.in  conv_rates_sphere.ipynb
code/build-cmake/: CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  code-config.cmake  config.h  config_collected.h.cmake
code/build-cmake/cmake/modules/: CTestTestfile.cmake  cmake_install.cmake
code/build-cmake/doc/: CTestTestfile.cmake  cmake_install.cmake
code/build-cmake/doc/doxygen/: CTestTestfile.cmake  cmake_install.cmake
code/build-cmake/dune/: CTestTestfile.cmake  cmake_install.cmake
code/build-cmake/dune/code/: cmake_install.cmake
code/build-cmake/language_tests/Fortran/: CMakeCache.txt  Makefile  cmake_install.cmake
code/build-cmake/src/: Makefile  cmake_install.cmake
code/cmake/modules/: CMakeLists.txt
code/dune/code/: code.hh
code/src/: ellipsoid_example.cc  torus_example.cc
doc/doxygen/: Doxylocal
dune/code/: CMakeLists.txt
src/: CMakeLists.txt  sphere_example.cc  torus_example.cc
